--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
+    }
+}
 
 android {
     compileSdkVersion 29
@@ -34,4 +42,63 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    compile 'com.google.protobuf:protobuf-java:3.1.0'
 }
+
+
+//
+//apply plugin: 'com.android.library'
+//
+//buildscript {
+//    repositories {
+//        google()
+//        jcenter()
+//        mavenCentral()
+//        maven { url 'https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java' }
+//    }
+//    dependencies {
+//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.2'
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+//        classpath 'com.android.tools.build:gradle:3.1.4'
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        jcenter()
+//        maven { url "https://maven.google.com" }
+//        maven { url "https://jitpack.io" }
+//    }
+//}
+//
+//android {
+//    compileSdkVersion 25
+//    buildToolsVersion '26.0.2'
+//
+//    defaultConfig {
+//        minSdkVersion 14
+//        targetSdkVersion 25
+//        versionCode 1
+//        versionName "1.0"
+//
+//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//}
+//
+//dependencies {
+//    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+//    compile 'com.android.support:appcompat-v7:25.0.1'
+//    testCompile 'junit:junit:4.12'
+//    compile 'com.google.protobuf:protobuf-java:3.1.0'
+//}
