--- a/build.gradle
+++ b/build.gradle
@@ -51,5 +51,5 @@ dependencies {
   })
   compile 'com.android.support:appcompat-v7:25.0.1'
   testCompile 'junit:junit:4.12'
-  compile 'com.google.protobuf:protobuf-java:3.1.0'
+  compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.8.0'
 }
